--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,7 @@ mod_icon=consecrationcompat_icon.png
 version_minecraft=FORGE-1.14.4
 version_forge=1.14.4-28.2.0
 version_mcp=58-1.14.4
+version_consecration=FORGE-1.14.4-2.0-beta1
 
 # Curse
 curse_id=366095
