--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     minecraft "net.minecraftforge:forge:${version_forge}"
     compile fg.deobf("top.theillusivec4.consecration:consecration:${version_consecration}")
     compile fg.deobf("curse.maven:tetra:2895098")
+    compile fg.deobf("curse.maven:spartan-weaponry:2894754")
     runtimeOnly fg.deobf("curse.maven:mgui:2873112")
 }
 
