--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -23,3 +23,9 @@ ${mod_description}
     versionRange="[1.14.4,1.15)"
     ordering="NONE"
     side="BOTH"
+[[dependencies.consecrationcompat]]
+    modId="consecration"
+    mandatory=true
+    versionRange="[FORGE-1.14.4-2.0-beta2,)"
+    ordering="NONE"
+    side="BOTH"
