update Spartan Weaponry module, closes #1

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -29,3 +29,9 @@ ${mod_description}
     versionRange="[FORGE-1.14.4-2.0-beta2,)"
     ordering="NONE"
     side="BOTH"
+[[dependencies.consecrationcompat]]
+    modId="spartanweaponry"
+    mandatory=false
+    versionRange="[2.0.0 alpha 3,)"
+    ordering="NONE"
+    side="BOTH"
