basic update to 1.15

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,10 @@ mod_description=An add-on for Consecration integration with various mods in 1.14
 mod_icon=consecrationcompat_icon.png
 
 # Dependencies
-version_minecraft=FORGE-1.14.4
-version_forge=1.14.4-28.2.0
-version_mcp=58-1.14.4
-version_consecration=FORGE-1.14.4-2.0-beta2
+version_minecraft=FORGE-1.15.2
+version_forge=1.15.2-31.2.0
+version_mcp=20200501-1.15.1
+version_consecration=FORGE-1.15.2-2.0
 
 # Curse
 curse_id=366095
