--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ archivesBaseName = "${mod_id}"
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    mappings channel: 'stable', version: "${version_mcp}".toString()
+    mappings channel: 'snapshot', version: "${version_mcp}".toString()
 
     runs {
         client {
@@ -62,11 +62,11 @@ repositories {
 dependencies {
     minecraft "net.minecraftforge:forge:${version_forge}"
     compileOnly fg.deobf("top.theillusivec4.consecration:consecration:${version_consecration}:api")
-    compile fg.deobf("curse.maven:tetra:2895098")
-    compile fg.deobf("curse.maven:spartan-weaponry:2903808")
-    compile fg.deobf("curse.maven:silent-gear:2849573")
-    runtimeOnly fg.deobf("curse.maven:mgui:2873112")
-    runtimeOnly fg.deobf("curse.maven:silent-lib:2783899")
+    compile fg.deobf("curse.maven:tetra:3023406")
+    compile fg.deobf("curse.maven:spartan-weaponry:3083985")
+    compile fg.deobf("curse.maven:silent-gear:3029638")
+    runtimeOnly fg.deobf("curse.maven:mgui:2928277")
+    runtimeOnly fg.deobf("curse.maven:silent-lib:3003984")
     runtimeOnly fg.deobf("top.theillusivec4.consecration:consecration:${version_consecration}")
 }
 
