--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,19 +14,19 @@ ${mod_description}
 [[dependencies.consecrationcompat]]
     modId="forge"
     mandatory=true
-    versionRange="[28,)"
+    versionRange="[31,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.consecrationcompat]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.14.4,1.15)"
+    versionRange="[1.15.2,1.16)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.consecrationcompat]]
     modId="consecration"
     mandatory=true
-    versionRange="[FORGE-1.14.4-2.0-beta2,)"
+    versionRange="[FORGE-1.15.2-2.0,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.consecrationcompat]]
