--- a/gradle.properties
+++ b/gradle.properties
@@ -3,21 +3,21 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Mod
-mod_version=0.2
+mod_version=1.0.0.1
 mod_group=top.theillusivec4.consecrationcompat
 mod_id=consecrationcompat
 mod_name=Consecration - Compatibility Add-on
 mod_url=https://www.curseforge.com/minecraft/mc-mods/consecration-compat
 mod_author=C4
-mod_description=An add-on for Consecration integration with various mods in 1.14+.
+mod_description=An add-on for Consecration integration with various mods in 1.14-1.15.
 mod_icon=consecrationcompat_icon.png
 
 # Dependencies
-version_minecraft=FORGE-1.14.4
-version_forge=1.14.4-28.2.0
-version_mcp=58-1.14.4
-version_consecration=FORGE-1.14.4-2.0-beta2
+version_minecraft=FORGE-1.15.2
+version_forge=1.15.2-31.2.5
+version_mcp=20200501-1.15.1
+version_consecration=FORGE-1.15.2-2.0
 
 # Curse
 curse_id=366095
-curse_release=beta
+curse_release=release
